# vitex

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  tatic_assert(stdis_pointerTvalue, pool can be used only for pointer types);  tomahawk.kdev4  vcpkg.json
.github/workflows/: cmake.yml  codeql-analysis.yml
.kdev4/: tomahawk.kdev4
data/d3d11/renderer/: gbuffer.hlsl  material.hlsl
data/d3d11/standard/: atmosphere.hlsl  compress.hlsl  ray-march.hlsl  space-sv.hlsl
data/d3d11/workflow/: rasterizer.hlsl
data/ogl/pass/: ambient.glsl  blur.glsl  reflection.glsl
data/ogl/renderer/: vertex.glsl
data/ogl/standard/: basic.glsl
data/ogl/workflow/: pass.glsl
lib/: async.cmake  compiler.cmake  coroutines.cmake  dependencies.cmake  install.sh  options.cmake  sources.cmake  targets.cmake  toolchain.cmake
lib/assimp/: CMakeLists.txt
lib/compiler/: CMakeLists.txt
lib/d3d11/: CMakeLists.txt
lib/freetype/: CMakeLists.txt
lib/glew/: CMakeLists.txt  install.sh
lib/install/: CMakeLists.txt
lib/mongoc/: CMakeLists.txt
lib/openal/: CMakeLists.txt
lib/opengl/: CMakeLists.txt
lib/openssl/: CMakeLists.txt
lib/package/: CMakeLists.txt
lib/pq/: CMakeLists.txt
lib/reshade/: CMakeLists.txt
lib/sdl2/: CMakeLists.txt  install.sh
lib/source/: CMakeLists.txt
lib/spirv/: CMakeLists.txt
lib/zlib/: CMakeLists.txt
opt/compiler/: CMakeLists.txt
opt/install/: CMakeLists.txt
opt/package/: CMakeLists.txt
opt/source/: CMakeLists.txt
opts/: resource.h
opts/install/: CMakeLists.txt
opts/option/: CMakeLists.txt
opts/package/: CMakeLists.txt
opts/resource/d3d11/: basic-effect.hlsl  cook-torrance.hlsl  deferred-out.hlsl  shape-vertex-out.hlsl  vertex-out.hlsl  view-buffer.hlsl
opts/resource/ogl/: animation-buffer.glsl  basic-effect.glsl  geometry.glsl  hemi-ambient.glsl  load-geometry.glsl  load-position.glsl  shape-vertex-in.glsl
opts/source/: CMakeLists.txt
opts/windows/: CMakeLists.txt
ref/angelscript/: CMakeLists.txt
ref/angelscript/include/: angelscript.h
ref/angelscript/source/: as_array.h  as_builder.cpp  as_builder.h  as_context.cpp  as_datatype.h  as_gc.cpp  as_objecttype.cpp  as_outputbuffer.h  as_scriptobject.cpp  as_string.cpp  as_tokenizer.h  (+1 more)
ref/bullet3/: CMakeLists.txt
ref/mongoc/: CMakeLists.txt
ref/nuklear/: CMakeLists.txt  nuklear.h
ref/openal/: CMakeLists.txt
ref/rapidxml/: CMakeLists.txt
ref/sdl2/: CMakeLists.txt
ref/stb/: CMakeLists.txt  stb_sprintf.h  stb_truetype.h  stb_vorbis.c
ref/tinyfiledialogs/: CMakeLists.txt
ref/wepoll/: CMakeLists.txt
refs/angelscript/: CMakeLists.txt
refs/assimp/: CMakeLists.txt
refs/bullet/: CMakeLists.txt
refs/bullet3/: CMakeLists.txt
refs/imgui/: CMakeLists.txt  imconfig.h  imgui.cpp  imgui.h  imgui_internal.h  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
refs/nuklear/: CMakeLists.txt  nuklear.h
refs/rapidxml/: CMakeLists.txt  rapidxml.hpp
refs/stb/: CMakeLists.txt  stb.h  stb_ds.h  stb_herringbone_wang_tile.h  stb_image.h  stb_image_write.h  stb_leakcheck.h  stb_voxel_render.h
refs/tinyfiledialogs/: CMakeLists.txt
refs/wepoll/: CMakeLists.txt
resource/d3d11/: basic-effect.hlsl  dof-pass.hlsl  element-system-depth.hlsl  emission-pass.hlsl  glitch-pass.hlsl  gui-gbuffer.hlsl  light-ambient.hlsl  light-line-shaded.hlsl  light-point.hlsl  light-probe.hlsl  light-spot.hlsl  model-gbuffer.hlsl  reflection-pass.hlsl  render-buffer.hlsl  skinned-model-depth.hlsl  skinned-model-gbuffer.hlsl  soft-body-depth-360.hlsl  soft-body-gbuffer.hlsl  ssao-pass.hlsl  ssio-pass.hlsl  tone-pass.hlsl  vertex-in.hlsl
resource/ogl/: dof-pass.glsl  element-system-depth-360-point.glsl  element-system-depth-360-quad.glsl  element-system-gbuffer.glsl  emission-pass.glsl  glitch-pass.glsl  gui-gbuffer.glsl  influence-vertex-in.glsl  influence-vertex-out.glsl  instance-element.glsl  light-line.glsl  light-point-shaded.glsl  light-spot-shaded.glsl  load-texcoord.glsl  model-depth.glsl  model-gbuffer.glsl  random-float-2.glsl  reflection-pass.glsl  skinned-model-depth-360.glsl  skinned-model-gbuffer.glsl  soft-body-depth-360.glsl  soft-body-depth.glsl  soft-body-gbuffer.glsl  ssao-pass.glsl  ssio-pass.glsl  tone-pass.glsl
src/edge/: CMakeLists.txt  config.hpp  edge.cpp  edge.h
src/mavi/: config.hpp  mavi.cpp  mavi.h
src/options/: vc_simd.h
src/scripts/: ce.as  cu.as  gui.as  std.as
src/supplies/rmlui/: CMakeLists.txt
src/supplies/rmlui/Source/Core/: StringUtilities.cpp
src/tomahawk/: CMakeLists.txt  tomahawk.cpp  tomahawk.h
src/vitex/: audio.cpp  audio.h  bindings.cpp  bindings.h  compute.cpp  compute.h  config.hpp  core.cpp  core.h  engine.cpp  engine.h  graphics.cpp  graphics.h  layer.cpp  layer.h  network.cpp  network.h  scripting.cpp  scripting.h  vitex.cpp  vitex.h
tomahawk/: audio.cpp  audio.h  compute.cpp  compute.h  data.cpp  data.h  engine.cpp  engine.h  graphics.cpp  graphics.h  network.cpp  network.h  resource.cpp  resource.h  rest.cpp  rest.h  script.cpp  script.h  tomahawk.cpp  tomahawk.h
tomahawk/audio/: effects.cpp  effects.h  filters.cpp  filters.h
tomahawk/engine/: components.cpp  components.h  gui.cpp  gui.h  processors.cpp  processors.h  renderers.cpp  renderers.h
tomahawk/graphics/: d3d11.cpp  d3d11.h  ogl.cpp  ogl.h
tomahawk/internal/: any.cpp  any.h  array.cpp  complex.cpp  complex.h  grid.h  handle.cpp  handle.h  math.cpp  string.h
tomahawk/network/: bson.cpp  bson.h  http.cpp  http.h  mongodb.cpp  mongodb.h  smtp.cpp  smtp.h
tomahawk/private/: array.h  datetime.cpp  datetime.h  dictionary.cpp  dictionary.h  grid.cpp  jit.cpp  jit.h  library.cpp  library.h  math.h  rest.cpp  rest.h  string.cpp  weakref.cpp  weakref.h
tomahawk/script/: core.cpp  core.h  interface.cpp  interface.h  rest.cpp  rest.h
tomahawk/wrapper/: audio.cpp  audio.h  compute.cpp  compute.h  engine.cpp  engine.h  graphics.cpp  graphics.h  network.cpp  network.h  rest.cpp  rest.h
var/: DOCKER.md  MANUAL.md  gcc.Dockerfile
var/images/: gcc.Dockerfile  llvm.Dockerfile
(+1094 files in other folders)
