#Resolve headers, refs and linkage
if (VI_FREETYPE)
	find_path(FREETYPE_LOCATION ft2build.h PATH_SUFFIXES "freetype2")
	if (FREETYPE_LOCATION)
		target_include_directories(mavi PRIVATE ${FREETYPE_LOCATION})
		find_package(Freetype QUIET)
		if (NOT Freetype_FOUND)
			find_library(Freetype_FOUND "freetype")
			if (Freetype_FOUND)
				set(FREETYPE_LIBRARIES "${Freetype_FOUND}")
				target_compile_definitions(mavi PRIVATE -DVI_FREETYPE)
			endif()
		else()
			target_compile_definitions(mavi PRIVATE -DVI_FREETYPE)
		endif()
		if (Freetype_FOUND OR FREETYPE_LIBRARIES)
			if (DEFINED FREETYPE_LIBRARIES)
				string(STRIP "${FREETYPE_LIBRARIES}" FREETYPE_LIBRARIES)
				target_link_libraries(mavi PRIVATE ${FREETYPE_LIBRARIES})
				message(STATUS "FreeType library found")
			else()
				target_link_libraries(mavi PRIVATE Freetype::Freetype)
				message(STATUS "FreeType target library found")
			endif()
		else()
			message("FreeType library was not found")
		endif()
	else()
		message("FreeType library was not found")
	endif()
endif()

#Cleanup
unset(FREETYPE_LOCATION CACHE)
unset(Freetype_FOUND CACHE)
unset(FREETYPE_LIBRARIES CACHE)
unset(FREETYPE_DIR CACHE)
unset(FREETYPE_LOCATION CACHE)