#Resolve headers, refs and linkage
set(VI_SDL2 ON CACHE BOOL "Enable SDL2 library")
if (VI_SDL2)
	find_path(SDL2_LOCATION SDL2/SDL.h)
	if (SDL2_LOCATION)
		target_include_directories(mavi PRIVATE ${SDL2_LOCATION})
		find_package(SDL2 CONFIG QUIET)
		if (NOT SDL2_FOUND)
			find_library(SDL2_FOUND "SDL2")
			if (SDL2_FOUND)
				set(SDL2_LIBRARIES "${SDL2_FOUND}")
				target_compile_definitions(mavi PRIVATE -DVI_SDL2)
			endif()
		else()
			target_compile_definitions(mavi PRIVATE -DVI_SDL2)
		endif()
		if (SDL2_FOUND OR SDL2_LIBRARIES)
			if (DEFINED SDL2_LIBRARIES)
				string(STRIP "${SDL2_LIBRARIES}" SDL2_LIBRARIES)
				target_link_libraries(mavi PRIVATE ${SDL2_LIBRARIES})
				message(STATUS "SDL2 library found")
			else()
				target_link_libraries(mavi PRIVATE SDL2::SDL2)
				message(STATUS "SDL2 target library found")
			endif()
		else()
			message("SDL2 library was not found")
		endif()
	else()
		message("SDL2 library was not found")
	endif()
endif()

#Cleanup
unset(SDL2_LOCATION CACHE)
unset(SDL2_FOUND CACHE)
unset(SDL2_LIBRARIES CACHE)
unset(SDL2_DIR CACHE)